--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <section class="card">
       <img src="Frontend/assets/img/photo-parc.png" alt="Parc National" />
       <div class="card-text">Découvrir les Parcs Nationaux</div>
+      <a href="./map.html">Découvrir les Parcs Nationaux</a>
+
     </section>
 
     <section class="card">
