--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
       <img src="/Parc-National-AAA-/Frontend/assets/img/burger-icon.png" alt="Menu" id="btn-menu" />
     </div>
   </header>
+<main class="main-content">
+  <section class="card">
+    <img src="Frontend/assets/img/photo-parc.png" alt="Parc National" />
+    <a class="card-text" href="./map.html">Découvrir les Parcs Nationaux</a>
+  </section>
+</main>
 
-  <main class="main-content">
-    <section class="card">
-      <img src="Frontend/assets/img/photo-parc.png" alt="Parc National" />
-      <div class="card-text">Découvrir les Parcs Nationaux</div>
-      <a href="./map.html">Découvrir les Parcs Nationaux</a>
 
     </section>
 
