--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -19,6 +19,7 @@
   </header>
 
   <main class="main-content">
+
     <section class="card">
       <img src="assets/img/photo-parc.png" alt="Parc National" />
       <div class="card-text">Découvrir les Parcs Nationaux</div>
@@ -32,6 +33,7 @@
 
   <!-- Login modal -->
 <div id="modal-login" class="modal hidden">
+  <button class="btn-close-modal" id="close-login-modal">✕</button>
   <h2>Se connecter</h2>
   <div id="login-message" class="text-center text-sm mt-2"></div>
   <input type="email" id="login-email" placeholder="Email" />
@@ -42,6 +44,7 @@
 
 <!-- Register modal -->
 <div id="modal-register" class="modal hidden">
+  <button class="btn-close-modal" id="close-register-modal">✕</button>
   <h2>Créer un compte</h2>
   <div id="register-message" class="text-center text-sm mt-2"></div>
   <input type="text" id="register-first-name" placeholder="Prénom" />
@@ -56,7 +59,7 @@
 <div id="user-overlay" class="hidden">
   <button class="btn-close-overlay" id="close-user-overlay">✕</button>
   <h2>Mon compte</h2>
-  <button>Voir mon profil</button>
+  <button>Mon profil</button>
   <button>Mes réservations</button>
   <button id="btn-logout">Se déconnecter</button>
 </div>
@@ -66,10 +69,10 @@
   <button class="btn-close-overlay" id="close-burger-overlay">✕</button>
   <div class="burger-menu">
     <a href="#">Parcs Nationaux</a>
-    <div class="submenu">- Sentiers</div>
-    <div class="submenu">- Ressources naturelles</div>
+    <div class="submenu">Sentiers</div>
+    <div class="submenu">Ressources naturelles</div>
     <a href="#">Réservations</a>
-    <div class="submenu">- Campings</div>
+    <div class="submenu">Campings</div>
   </div>
 </div>
 
