--- a/index.html
+++ b/index.html
@@ -109,11 +109,9 @@
   <button class="btn-close-overlay" id="close-burger-overlay">✕</button>
   <div class="burger-menu">
     <a href="#">Parcs Nationaux</a>
-    <div class="submenu">- Sentiers</div>
     <div class="submenu">- Ressources naturelles</div>
     <a href="#" id="btn-show-campings">Campings</a>
-    <div class="submenu">- Campings</div>
-    <a href="http://localhost/campings" id="btn-reserve-campings">Réservation Campings</a>
+    <div class="submenu">Présentation des campings</div>
   </div>
 </div>
 
