--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
   <button class="btn-close-overlay" id="close-burger-overlay">✕</button>
   <div class="burger-menu">
     <a href="#">Parcs Nationaux</a>
-    <div class="submenu">- Ressources naturelles</div>
+    <a href="#" class="submenu" id="btn-show-resources">- Ressources naturelles</a>
     <a href="#" id="btn-show-campings">Campings</a>
-    <div class="submenu">Présentation des campings</div>
+    <a href="#" class="submenu" id="btn-show-campings-presentation">- Présentation des campings</a>
   </div>
 </div>
 
